...
    if (userNotifications && userNotifications.notificationsCount! > 0) {
      return {
        tabBarBadge:
          userNotifications.notificationsCount > 99
            ? '99+'
            : userNotifications.notificationsCount,
        tabBarAccessibilityLabel: 'tab-bar-notification',
        tabBarTestID: 'tab-bar-notification',
      };
    }
    return {
      tabBarAccessibilityLabel: 'tab-bar-notification',
      tabBarTestID: 'tab-bar-notification',
...
      />

      <Tab.Screen
        name="Menu"
        component={Menu}
        options={{
          tabBarAccessibilityLabel: 'tab-bar-riderize',
          tabBarTestID: 'tab-bar-riderize',
          unmountOnBlur: true,
        }}
      />
      <Tab.Screen
        name="Monitor"
...
        options={badgeTest()}
      />
      <Tab.Screen
        name="Settings"
        component={Settings}
        options={{
          tabBarAccessibilityLabel: 'tab-bar-settings',
          tabBarTestID: 'tab-bar-settings',
          unmountOnBlur: true,
        }}
      />
    </Tab.Navigator>
  );
...
