...
    <>
      <StatusBar
        translucent
        barStyle="light-content"
        backgroundColor="transparent"
      />
      <View style={{ flex: 1 }} testID="app-root" accessibilityLabel="app-root">
        <Background
          source={backgroundImage}
          style={{
            flex: 1,
            justifyContent: 'center',
            marginBottom: '-60%',
...
