...
          <ActivityIndicator size="large" />
        </ModalContainer>
      </Modal>

      <SafeAreaView
        style={{ flex: 1, marginTop: 40 }}
        testID="challenges-view"
        accessibilityLabel="challenges-view"
      >
        <StatusBar
          translucent
          barStyle="dark-content"
          backgroundColor="transparent"
...
